getting absolute path
use getAttribute and new URL() to get the absolute path

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   ],
 
   "permissions": [
-    "webRequest", "webRequestBlocking",
+    "webRequest", 
     "storage",
     "tabs",
     "downloads"
