--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
 	  },
 
   "options_ui": {
-    "page": "options.html",
+    "page": "html/options.html",
     "open_in_tab": false
   },
   
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "js/background.js"
   },
 
   "content_scripts": [
@@ -34,7 +34,7 @@
 
 
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "html/popup.html"
   }
 
 
