--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
+    "jsdom": "^21.1.1",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0"
   }
