Preparing for final deliverable
- Removed files we do not need
manifest.json:
- Update with new name, description, and version
window.html:
- hide spinner
window.js:
- Added try catch blocks to prevent program from unnecessarily stopping
- Remove protocol from urls in getTitle
- Shorten image names that are too long to prevent unzip error
popup/options changes:
- Capped depth at 2, with added option of removing this limit
- New tutorial link
- style changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Grey-box Web Scraper",
-  "description": "Download websites",
-  "version": "3.2.3",
+  "name": "Project Web Scraper",
+  "description": "Make an offline version of a web page in one simple click.",
+  "version": "0.5.0",
   "manifest_version": 3,
 	"icons": {
 		"128": "images/Picture4_128.png",
